[tool.poetry]
name = "asdf23"
version = "0.1.0"
description = ""
authors = ["Clay Boone <tener.hades@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
pytest = "^8.3.2"
black = "^24.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
